--- a/src/main/webapp/Header.jspf
+++ b/src/main/webapp/Header.jspf
@@ -1,10 +1,9 @@
 <%-- Para Home.jsp, Registro.jsp y Login.jsp: --%>
 <%@ page pageEncoding="UTF-8" %>
-<link type="text/css" href="css/search.css"/>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-    <a href="Home.jsp" class="navbar-brand">Movie Recommender</a>
+    <a href="HomeServlet" class="navbar-brand">Movie Recommender</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="Registro.jsp"><span class="glyphicon glyphicon-user"></span> Registrarse</a></li>
